--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,6 +107,7 @@ nav {
   display: inline-block;
   font-size: 0;
   margin-top: -5px;
+  overflow: hidden;
 }
 .x4 {
   width: 100%;
